--- a/friends.html
+++ b/friends.html
@@ -102,7 +102,7 @@
     </div>
 
     <div id="no-mobile">
-      <span>Your screen is super big 😭</span>
+      <span>Your screen is too big 😭</span>
     </div>
 
     <script
